force-app/main/default/objects/SCC_Rekon__c/SCC_Rekon__c.object-meta.xml
<CustomObject>
    <label>Rekon</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rekon</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>