force-app/main/default/objects/SCC_Rekon__c/fields/Amount_Tartun__c.field-meta.xml
<CustomField>
    <fullName>Amount_Tartun__c</fullName>
    <label>Amount Tartun</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>