force-app/main/default/objects/SCC_Rekon__c/fields/SCC_Amount__c.field-meta.xml
<CustomField>
    <fullName>SCC_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>