force-app/main/default/objects/SCC_Rekon__c/fields/SCC_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>SCC_Card_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>