force-app/main/default/objects/SCC_Rekon__c/fields/SCC_Case__c.field-meta.xml
<CustomField>
    <fullName>SCC_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Rekon</relationshipLabel>
    <relationshipName>SCC_Rekon</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>