force-app/main/default/objects/SCC_Rekon__c/fields/SCC_Credit_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>SCC_Credit_Account_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>