force-app/main/default/objects/SCC_Rekon__c/fields/SCC_Debet_Account__c.field-meta.xml
<CustomField>
    <fullName>SCC_Debet_Account__c</fullName>
    <label>Debet Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>