force-app/main/default/objects/SCC_Rekon__c/fields/SCC_Seq_No__c.field-meta.xml
<CustomField>
    <fullName>SCC_Seq_No__c</fullName>
    <label>Seq No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>