force-app/main/default/objects/SCC_Rekon__c/fields/SCC_Status_Rekon__c.field-meta.xml
<CustomField>
    <fullName>SCC_Status_Rekon__c</fullName>
    <label>Status Rekon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>