force-app/main/default/objects/SCC_Rekon__c/fields/SCC_Table_Rekon__c.field-meta.xml
<CustomField>
    <fullName>SCC_Table_Rekon__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Table Rekon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>