force-app/main/default/objects/SCC_Rekon__c/fields/SCC_Terminal_Id__c.field-meta.xml
<CustomField>
    <fullName>SCC_Terminal_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Terminal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>