force-app/main/default/objects/SCC_Rekon__c/fields/SCC_UUID__c.field-meta.xml
<CustomField>
    <fullName>SCC_UUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>