force-app/main/default/objects/SCC_Rekon__c/validationRules/For_Agent_only.validationRule-meta.xml
<ValidationRule>
    <fullName>For_Agent_only</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; (!$Permission.BO_Maker_NFT &amp;&amp;  !$Permission.BO_Maker_NFT_ISSUER &amp;&amp; $Profile.Name != &quot;System Administrator&quot; &amp;&amp; $Profile.Name != &quot;Salesforce API Only System Integrations&quot;)</errorConditionFormula>
    <errorMessage>Tidak bisa submit rekon</errorMessage>
</ValidationRule>