force-app/main/default/objects/SCC_Rekon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SCC_Case__c</columns>
    <columns>SCC_Amount__c</columns>
    <columns>SCC_Status_Rekon__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>